@@ -1,3 +1,11 @@
+Mon Dec 14 11:47:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* eval.c (rb_method_missing): adjusted format and argument number.
+
+	* eval.c (rb_call): fixed for super in cached method.
+	  [ruby-dev:39757]
+n
+
 Mon Dec 14 11:40:35 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* hash.c (ruby_setenv): get rid of crash in Solaris 8 and 10.
